feat: make local versions possible
And especially in such a way that Git won't claim it has changes

--- a/lavalink/Dockerfile
+++ b/lavalink/Dockerfile
@@ -3,7 +3,9 @@ FROM adoptopenjdk/openjdk13-openj9:alpine-jre
 WORKDIR /opt/Lavalink
 
 COPY Lavalink.jar Lavalink.jar
-COPY application.yml application.yml
+COPY application* ./
+
+RUN if [[ -f "./application.local.yml" ]]; then mv "./application.local.yml" "./application.yml"; fi
 
 EXPOSE 2333
 
