--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,6 +20,15 @@
         "doc",
         "projectManagement"
       ]
+    },
+    {
+      "login": "kyranet",
+      "name": "Antonio Román",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/24852502?v=4",
+      "profile": "https://github.com/kyranet",
+      "contributions": [
+        "projectManagement"
+      ]
     }
   ],
   "contributorsPerLine": 7
