--- a/.github/workflows/lavalink-deployment.yml
+++ b/.github/workflows/lavalink-deployment.yml
@@ -44,4 +44,4 @@ jobs:
           workdir: lavalink
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: 'latest,stable,main'
+          tags: 'latest,stable,master,main'
