ci(deploy): fix publish actions

--- a/.github/workflows/lavalink-deployment.yml
+++ b/.github/workflows/lavalink-deployment.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           lfs: true
       - name: Publish to Dockerhub
-        uses: elgohr/Publish-Docker-Github-Action@main
+        uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: skyrabot/lavalink
           workdir: lavalink
