--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -7,6 +7,7 @@
     "haste-server": "./server.js"
   },
   "scripts": {
+    "build": "terser lib/application.js --compress ecma=2019 --mangle --format comments=false,ecma=2019 --output static/minified/application.min.js",
     "start": "node server.js",
     "lint": "eslint lib static docker-entrypoint.js server.js",
     "format": "prettier --write lib static docker-entrypoint.js server.js"
@@ -31,7 +32,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
+    "terser": "^5.6.1",
     "typescript": "^4.2.2"
   },
-	"prettier": "@sapphire/prettier-config"
+  "prettier": "@sapphire/prettier-config"
 }
