feat(haste): greatly improve about and css

--- a/haste-server/.gitignore
+++ b/haste-server/.gitignore
@@ -21,3 +21,8 @@ data/
 # Ignore heapsnapshot and log files
 *.heapsnapshot
 *.log
+
+# Files that are build from lib/
+application.min.js
+highlight.min.js
+applicatio.css
