--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -7,9 +7,12 @@
     "haste-server": "./server.js"
   },
   "scripts": {
-    "build": "terser lib/application.js --compress ecma=2019 --mangle --format comments=false,ecma=2019 --output static/minified/application.min.js",
+    "build": "run-p terser:** scss:**",
+    "scss:preprocess": "sass --no-source-map lib/stylesheets/application.scss static/css/application.css",
+    "terser:application": "terser lib/scripts/application.js --compress ecma=2019 --mangle --format comments=false,ecma=2019 --output static/minified/application.min.js",
+    "terser:highlight": "terser lib/scripts/highlight.js --compress ecma=2019 --mangle --format comments=false,ecma=2019 --output static/minified/highlight.min.js",
     "start": "node server.js",
-    "lint": "eslint lib static docker-entrypoint.js server.js",
+    "lint": "eslint lib docker-entrypoint.js server.js --fix",
     "format": "prettier --write lib static docker-entrypoint.js server.js"
   },
   "dependencies": {
@@ -31,7 +34,9 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "sass": "^1.32.8",
     "terser": "^5.6.1",
     "typescript": "^4.2.2"
   },
