--- a/haste-server/tsconfig.eslint.json
+++ b/haste-server/tsconfig.eslint.json
@@ -4,5 +4,5 @@
 		"allowJs": true,
 		"checkJs": true
 	},
-	"include": ["lib", "static", "config.js", "docker-entrypoint.js", "server.js"]
+	"include": ["lib", "docker-entrypoint.js", "server.js"]
 }
