--- a/haste-server/tsconfig.eslint.json
+++ b/haste-server/tsconfig.eslint.json
@@ -1,8 +1,3 @@
 {
-	"extends": "@sapphire/ts-config",
-	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true
-	},
-	"include": ["lib", "docker-entrypoint.js", "server.js"]
+	"extends": "./tsconfig.json"
 }
