--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -42,6 +42,17 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.2.2"
   },
-  "browserslist": "> 0.2%",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "prettier": "@sapphire/prettier-config"
 }
