--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@pnotify/core": "^5.2.0",
     "busboy": "0.3.1",
     "connect": "^3.7.0",
     "connect-ratelimit": "0.0.7",
