--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
+    "@parcel/packager-raw-url": "2.0.0-beta.2",
     "@parcel/transformer-sass": "2.0.0-beta.2",
+    "@parcel/transformer-webmanifest": "2.0.0-beta.2",
     "@sapphire/eslint-config": "^3.0.1",
     "@sapphire/prettier-config": "^1.0.7",
     "@sapphire/ts-config": "^2.0.1",
