--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -12,8 +12,8 @@
     "build": "parcel build src/frontend/index.html",
     "postbuild": "node scripts/copyRobots.mjs",
     "clean": "rimraf .parcel-cache dist data",
-    "lint": "eslint src --fix",
-    "format": "prettier --write src"
+    "lint": "eslint src scripts --fix",
+    "format": "prettier --write src scripts"
   },
   "dependencies": {
     "@pnotify/core": "^5.2.0",
