fix(haste): docker fixes

--- a/haste-server/Dockerfile
+++ b/haste-server/Dockerfile
@@ -9,37 +9,11 @@ COPY yarn.lock .
 COPY README.md .
 
 ENV NODE_ENV production
+ENV HOST=0.0.0.0
+ENV PORT=8290
 
 RUN yarn --frozen-lockfile --no-bin-links
 
-ENV LOGGING_LEVEL=verbose \
-    LOGGING_TYPE=Console \
-    LOGGING_COLORIZE=true
+EXPOSE 8290
 
-ENV HOST=0.0.0.0\
-    PORT=8290\
-    KEY_LENGTH=10\
-    MAX_LENGTH=400000\
-    STATIC_MAX_AGE=86400\
-    RECOMPRESS_STATIC_ASSETS=true
-
-ENV KEYGENERATOR_TYPE=phonetic \
-    KEYGENERATOR_KEYSPACE=
-
-ENV RATELIMITS_NORMAL_TOTAL_REQUESTS=500\
-    RATELIMITS_NORMAL_EVERY_MILLISECONDS=60000 \
-    RATELIMITS_WHITELIST_TOTAL_REQUESTS= \
-    RATELIMITS_WHITELIST_EVERY_MILLISECONDS=  \
-    # comma separated list for the whitelisted \
-    RATELIMITS_WHITELIST=example1.whitelist,example2.whitelist \
-    \   
-    RATELIMITS_BLACKLIST_TOTAL_REQUESTS= \
-    RATELIMITS_BLACKLIST_EVERY_MILLISECONDS= \
-    # comma separated list for the blacklisted \
-    RATELIMITS_BLACKLIST=example1.blacklist,example2.blacklist 
-
-EXPOSE ${PORT}
-STOPSIGNAL SIGINT
-ENTRYPOINT [ "sh", "docker-entrypoint.sh" ]
-
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
