--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "haste-server",
-  "version": "1.0.0",
-  "description": "Private Pastebin Server",
-  "private": true,
-  "bin": {
-    "haste-server": "./server.js"
-  },
-  "scripts": {
-    "start": "node src/backend/server.js",
-    "dev": "run-s build start",
-    "build": "parcel build src/frontend/index.html",
-    "postbuild": "node scripts/copyRobots.mjs",
-    "clean": "rimraf .parcel-cache dist data",
-    "lint": "eslint src scripts --fix",
-    "format": "prettier --write src scripts"
-  },
-  "dependencies": {
-    "@pnotify/core": "^5.2.0",
-    "busboy": "0.3.1",
-    "connect": "^3.7.0",
-    "connect-ratelimit": "0.0.7",
-    "connect-route": "0.1.5",
-    "highlight.js": "^10.7.1",
-    "redis": "3.0.2",
-    "st": "^2.0.0",
-    "uglify-js": "3.12.8",
-    "winston": "^2.4.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.13",
-    "@parcel/packager-raw-url": "2.0.0-beta.2",
-    "@parcel/transformer-sass": "2.0.0-beta.2",
-    "@parcel/transformer-webmanifest": "2.0.0-beta.2",
-    "@sapphire/eslint-config": "^3.0.1",
-    "@sapphire/prettier-config": "^1.0.7",
-    "@sapphire/ts-config": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "npm-run-all": "^4.1.5",
-    "parcel": "^2.0.0-beta.2",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.2.2"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "prettier": "@sapphire/prettier-config"
+	"name": "haste-server",
+	"version": "1.0.0",
+	"description": "Private Pastebin Server",
+	"private": true,
+	"bin": {
+		"haste-server": "./server.js"
+	},
+	"scripts": {
+		"start": "node src/backend/server.js",
+		"dev": "run-s build start",
+		"build": "parcel build src/frontend/index.html",
+		"postbuild": "node scripts/copyRobots.mjs",
+		"clean": "rimraf .parcel-cache dist data",
+		"lint": "eslint src scripts --fix --ext js,ts,mjs",
+		"format": "prettier --write src scripts"
+	},
+	"dependencies": {
+		"@pnotify/core": "^5.2.0",
+		"connect": "^3.7.0",
+		"connect-ratelimit": "0.0.7",
+		"connect-route": "0.1.5",
+		"highlight.js": "^10.7.1",
+		"redis": "3.0.2",
+		"st": "^2.0.0",
+		"winston": "^2.4.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.13.13",
+		"@parcel/packager-raw-url": "2.0.0-beta.2",
+		"@parcel/transformer-sass": "2.0.0-beta.2",
+		"@parcel/transformer-webmanifest": "2.0.0-beta.2",
+		"@sapphire/eslint-config": "^3.0.2",
+		"@sapphire/prettier-config": "^1.0.8",
+		"@sapphire/ts-config": "^2.1.0",
+		"@typescript-eslint/eslint-plugin": "^4.19.0",
+		"@typescript-eslint/parser": "^4.19.0",
+		"eslint": "^7.23.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"npm-run-all": "^4.1.5",
+		"parcel": "^2.0.0-beta.2",
+		"prettier": "^2.2.1",
+		"rimraf": "^3.0.2",
+		"typescript": "^4.2.3"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"prettier": "@sapphire/prettier-config",
+	"resolutions": {
+		"is-svg": "^4.3.1"
+	}
 }
