--- a/haste-server/docker-compose.yml
+++ b/haste-server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     command: redis-server --port 8287 --requirepass redis
   haste:
     container_name: hasteserver
-    image: haste-server:latest
+    image: skyrabot/haste-server:latest
     build: .
     restart: always
     tty: true
