--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,7 +4,10 @@
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
-    "README.md"
+    "README.md",
+    "haste-server/README.md",
+    "lavalink/README.md",
+    "postgres/README.md"
   ],
   "imageSize": 100,
   "commit": true,
@@ -28,6 +31,33 @@
       "profile": "https://github.com/kyranet",
       "contributions": [
         "projectManagement"
+      ]
+    },
+    {
+      "login": "Nytelife26",
+      "name": "Tyler J Russell",
+      "avatar_url": "https://avatars.githubusercontent.com/u/22531310?v=4",
+      "profile": "https://github.com/Nytelife26",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "NM-EEA-Y",
+      "name": "Skyra",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61647701?v=4",
+      "profile": "https://skyra.pw/",
+      "contributions": [
+        "maintenance"
+      ]
+    },
+    {
+      "login": "depfu[bot]",
+      "name": "depfu[bot]",
+      "avatar_url": "https://avatars.githubusercontent.com/in/715?v=4",
+      "profile": "https://github.com/apps/depfu",
+      "contributions": [
+        "maintenance"
       ]
     }
   ],
