--- a/.github/workflows/haste-server-deployment.yml
+++ b/.github/workflows/haste-server-deployment.yml
@@ -90,10 +90,12 @@ jobs:
           name: distfolder
           path: haste-server/dist/
 
-  HasteServer-Image-GitHub:
-    name: Publish haste-server image to Github Package Registry
+  Publish:
+    name: Publish image to container registries
     runs-on: ubuntu-latest
-    if: "!contains(needs.pre_ci.outputs.commit_message, '[skip ci]')"
+    if: >-
+      !(contains(needs.pre_ci.outputs.commit_message, '[skip ci]')
+      ||contains(needs.pre_ci.outputs.commit_message, '[skip docker]'))
     needs: [pre_ci, Linting, Building]
     steps:
       - name: Checkout Project
@@ -103,34 +105,33 @@ jobs:
         with:
           name: distfolder
           path: haste-server/dist/
-      - name: Publish to Github Package Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1.1.2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1.8.0
         with:
-          name: skyra-project/docker-images/haste-server
-          username: NM-EEA-Y
-          workdir: haste-server
-          password: ${{ secrets.SKYRA_TOKEN }}
-          tags: 'latest,stable,master,main'
-          registry: docker.pkg.github.com
-
-  HasteServer-Image-Dockerhub:
-    name: Publish haste-server image to Dockerhub
-    runs-on: ubuntu-latest
-    if: "!contains(needs.pre_ci.outputs.commit_message, '[skip ci]')"
-    needs: [pre_ci, Linting, Building]
-    steps:
-      - name: Checkout Project
-        uses: actions/checkout@v2
-      - name: Download dist folder
-        uses: actions/download-artifact@v2
-        with:
-          name: distfolder
-          path: haste-server/dist/
-      - name: Publish to Dockerhub
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: skyrabot/haste-server
-          workdir: haste-server
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: 'latest,stable,master,main'
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2.4.0
+        with:
+          push: true
+          context: ./haste-server
+          tags: |
+            skyrabot/haste-server:latest
+            ghcr.io/skyra-project/haste-server:latest
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v2.4.2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: skyrabot/haste-server
+          readme-filepath: ./haste-server/README.md
+          short-description: Up2date and maintained Hastebin server - https://hastebin.skyra.pw
