--- a/.github/workflows/lavalink-deployment.yml
+++ b/.github/workflows/lavalink-deployment.yml
@@ -9,8 +9,8 @@ on:
       - '.github/workflows/lavalink-deployment.yml'
 
 jobs:
-  Lavalink-Image-GitHub:
-    name: Publish lavalink image to Github Package Registry
+  Publish:
+    name: Publish image to container registries
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
@@ -18,30 +18,33 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
-      - name: Publish to Github Package Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1.1.2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1.8.0
         with:
-          name: skyra-project/docker-images/lavalink
-          workdir: lavalink
-          username: NM-EEA-Y
-          password: ${{ secrets.SKYRA_TOKEN }}
-          tags: 'latest,stable,master,main'
-          registry: docker.pkg.github.com
-
-  Lavalink-Image-Dockerhub:
-    name: Publish lavalink image to Dockerhub
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    steps:
-      - name: Checkout Project
-        uses: actions/checkout@v2
-        with:
-          lfs: true
-      - name: Publish to Dockerhub
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: skyrabot/lavalink
-          workdir: lavalink
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: 'latest,stable,master,main'
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2.4.0
+        with:
+          push: true
+          context: ./lavalink
+          tags: |
+            skyrabot/lavalink:latest
+            ghcr.io/skyra-project/lavalink:latest
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v2.4.2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: skyrabot/lavalink
+          readme-filepath: ./lavalink/README.md
+          short-description: Standalone audio sending node based on Lavaplayer.
