--- a/.github/workflows/postgres-deployment.yml
+++ b/.github/workflows/postgres-deployment.yml
@@ -1,4 +1,4 @@
-name: Continuous Deployment - Postgres
+name: Continuous Deployment - postgres
 
 on:
   push:
@@ -9,37 +9,40 @@ on:
       - '.github/workflows/postgres-deployment.yml'
 
 jobs:
-  Postgres-Image-GitHub:
-    name: Publish postgres image to Github Package Registry
+  Publish:
+    name: Publish image to container registries
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Checkout Project
         uses: actions/checkout@v2
-      - name: Publish to Github Package Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1.1.2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1.8.0
         with:
-          name: skyra-project/docker-images/postgres
-          workdir: postgres
-          username: NM-EEA-Y
-          password: ${{ secrets.SKYRA_TOKEN }}
-          tags: 'latest,stable,master,main'
-          registry: docker.pkg.github.com
-
-  Postgres-Image-Dockerhub:
-    name: Publish postgres image to Dockerhub
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    steps:
-      - name: Checkout Project
-        uses: actions/checkout@v2
-        with:
-          lfs: true
-      - name: Publish to Dockerhub
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: skyrabot/postgres
-          workdir: postgres
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: 'latest,stable,master,main'
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2.4.0
+        with:
+          push: true
+          context: ./postgres
+          tags: |
+            skyrabot/postgres:latest
+            ghcr.io/skyra-project/postgres:latest
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v2.4.2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: skyrabot/postgres
+          readme-filepath: ./postgres/README.md
+          short-description: Postgres Database with customized defaults for Skyra Discord bot
