--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -3,9 +3,6 @@
 	"version": "1.0.0",
 	"description": "Private Pastebin Server",
 	"private": true,
-	"bin": {
-		"haste-server": "./server.js"
-	},
 	"scripts": {
 		"start": "node src/backend/server.js",
 		"dev": "run-s build start",
@@ -25,20 +22,15 @@
 		"st": "^2.0.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.14",
+		"@babel/core": "^7.14.0",
 		"@parcel/packager-raw-url": "2.0.0-beta.2",
 		"@parcel/transformer-sass": "2.0.0-beta.2",
 		"@parcel/transformer-webmanifest": "2.0.0-beta.2",
-		"@sapphire/eslint-config": "^3.0.3",
-		"@sapphire/prettier-config": "^1.0.9",
-		"@sapphire/ts-config": "^2.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.21.0",
-		"@typescript-eslint/parser": "^4.22.0",
-		"eslint": "^7.24.0",
-		"eslint-config-prettier": "^8.2.0",
-		"eslint-plugin-prettier": "^3.4.0",
+		"@sapphire/eslint-config": "^3.1.1",
+		"@sapphire/prettier-config": "^1.1.0",
+		"@sapphire/ts-config": "^2.2.0",
 		"npm-run-all": "^4.1.5",
-		"parcel": "^2.0.0-beta.2",
+		"parcel": "2.0.0-beta.2",
 		"prettier": "^2.2.1",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.2.4"
