--- a/.github/workflows/haste-server-deployment.yml
+++ b/.github/workflows/haste-server-deployment.yml
@@ -40,10 +40,10 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@v2
-      - name: Use Node.js 15
+      - name: Use Node.js v16
         uses: actions/setup-node@v2
         with:
-          node-version: 15
+          node-version: 16
       - name: Restore NodeJS Cache
         uses: actions/cache@v2.1.5
         with:
@@ -64,10 +64,10 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@v2
-      - name: Use Node.js 15
+      - name: Use Node.js v16
         uses: actions/setup-node@v2
         with:
-          node-version: 15
+          node-version: 16
       - name: Restore NodeJS Cache
         uses: actions/cache@v2.1.5
         with:
