--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -52,7 +52,6 @@
 		"is-svg": "^4.3.1",
 		"lodash": "^4.17.21",
 		"merge": "^2.1.1",
-		"trim": "^1.0.1",
-		"postcss": "^8.2.15"
+		"trim": "^1.0.1"
 	}
 }
