--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -26,12 +26,12 @@
 		"@parcel/packager-raw-url": "2.0.0-beta.2",
 		"@parcel/transformer-sass": "2.0.0-beta.2",
 		"@parcel/transformer-webmanifest": "2.0.0-beta.2",
-		"@sapphire/eslint-config": "^3.1.3",
-		"@sapphire/prettier-config": "^1.1.2",
-		"@sapphire/ts-config": "^2.2.2",
+		"@sapphire/eslint-config": "^3.1.4",
+		"@sapphire/prettier-config": "^1.1.3",
+		"@sapphire/ts-config": "^2.2.3",
 		"npm-run-all": "^4.1.5",
 		"parcel": "2.0.0-beta.2",
-		"prettier": "^2.3.0",
+		"prettier": "^2.3.1",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.3.2"
 	},
@@ -52,6 +52,7 @@
 		"is-svg": "^4.3.1",
 		"lodash": "^4.17.21",
 		"merge": "^2.1.1",
-		"trim": "^1.0.1"
+		"trim": "^1.0.1",
+		"normalize-url": "^4.5.1"
 	}
 }
