--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"start": "node src/backend/server.js",
-		"dev": "run-s build start",
+		"dev": "run-s clean build start",
 		"build": "parcel build src/frontend/index.html",
 		"postbuild": "node scripts/copyRobots.mjs",
 		"clean": "rimraf .parcel-cache dist data",
@@ -17,23 +17,24 @@
 		"connect": "^3.7.0",
 		"connect-ratelimit": "0.0.7",
 		"connect-route": "0.1.5",
-		"highlight.js": "^10.7.3",
+		"highlight.js": "^11.0.1",
 		"redis": "3.1.2",
+		"regenerator-runtime": "^0.13.7",
 		"st": "^2.0.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.14.3",
-		"@parcel/packager-raw-url": "2.0.0-beta.2",
-		"@parcel/transformer-sass": "2.0.0-beta.2",
-		"@parcel/transformer-webmanifest": "2.0.0-beta.2",
-		"@sapphire/eslint-config": "^3.1.4",
-		"@sapphire/prettier-config": "^1.1.3",
-		"@sapphire/ts-config": "^2.2.3",
+		"@babel/core": "^7.14.6",
+		"@parcel/packager-raw-url": "2.0.0-beta.3.1",
+		"@parcel/transformer-sass": "2.0.0-beta.3.1",
+		"@parcel/transformer-webmanifest": "2.0.0-beta.3.1",
+		"@sapphire/eslint-config": "^3.2.0",
+		"@sapphire/prettier-config": "^1.1.4",
+		"@sapphire/ts-config": "^2.3.0",
 		"npm-run-all": "^4.1.5",
-		"parcel": "2.0.0-beta.2",
+		"parcel": "2.0.0-beta.3.1",
 		"prettier": "^2.3.1",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.3.2"
+		"typescript": "^4.3.4"
 	},
 	"browserslist": {
 		"production": [
