--- a/haste-server/.gitignore
+++ b/haste-server/.gitignore
@@ -11,6 +11,10 @@ coverage/
 data/
 dist/
 
+# Yarn files
+.yarn/install-state.gz
+.yarn/build-state.yml
+
 # Environment variables
 .DS_Store
 .env.local
