--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -5,10 +5,9 @@
 	"private": true,
 	"scripts": {
 		"start": "node src/backend/server.js",
-		"dev": "run-s build start",
-		"build": "parcel build src/frontend/index.html",
-		"postbuild": "node scripts/copyRobots.mjs",
-		"clean": "rimraf .parcel-cache dist data",
+		"dev": "yarn build && yarn start",
+		"build": "parcel build src/frontend/index.html && node scripts/copyRobots.mjs",
+		"clean": "rimraf \".parcel-cache\" \"dist\" \"data\"",
 		"lint": "eslint src scripts --fix --ext js,ts,mjs",
 		"format": "prettier --write src scripts"
 	},
@@ -25,12 +24,15 @@
 	"devDependencies": {
 		"@babel/core": "^7.15.8",
 		"@parcel/packager-raw-url": "^2.0.0",
+		"@parcel/packager-xml": "^2.0.0",
 		"@parcel/transformer-image": "2.0.0",
 		"@parcel/transformer-sass": "2.0.0",
 		"@parcel/transformer-webmanifest": "^2.0.0",
+		"@parcel/transformer-xml": "^2.0.0",
 		"@sapphire/eslint-config": "^4.0.1",
 		"@sapphire/prettier-config": "^1.2.3",
 		"@sapphire/ts-config": "^3.1.2",
+		"eslint": "^8.1.0",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.0.0",
 		"prettier": "^2.4.1",
@@ -50,8 +52,5 @@
 		]
 	},
 	"prettier": "@sapphire/prettier-config",
-	"resolutions": {
-		"is-svg": "^4.3.1",
-		"set-value": "^4.1.0"
-	}
+	"packageManager": "yarn@3.0.2"
 }
