feat(hasteserver): rewrite redis handler to ioredis

--- a/haste-server/Dockerfile
+++ b/haste-server/Dockerfile
@@ -1,23 +1,59 @@
-FROM --platform=linux/amd64 node:17-alpine
+# ================ #
+#    Base Stage    #
+# ================ #
 
-RUN apk add --no-cache dumb-init
+FROM node:17-alpine as base
 
 WORKDIR /usr/app/
 
-COPY --chown=node:node src/backend/ src/backend/
-COPY --chown=node:node dist/ dist/
-COPY --chown=node:node package.json .
-COPY --chown=node:node yarn.lock .
-COPY --chown=node:node README.md .
+ENV HUSKY=0
+ENV CI=true
 
-ENV NODE_ENV production
+RUN apk add --no-cache dumb-init python3 make g++
+
+COPY --chown=node:node yarn.lock .
+COPY --chown=node:node package.json .
+COPY --chown=node:node .yarnrc.yml .
+COPY --chown=node:node README.md .
+COPY --chown=node:node .yarn/ .yarn/
+
+RUN sed -i 's/"prepare": "husky install .github\/husky"/"prepare": ""/' ./package.json
+
+ENTRYPOINT ["dumb-init", "--"]
+
+# ================ #
+#   Builder Stage  #
+# ================ #
+
+FROM base as builder
+
+ENV NODE_ENV="development"
+
+COPY --chown=node:node tsconfig.json tsconfig.json
+COPY --chown=node:node src/ src/
+COPY --chown=node:node scripts/ scripts/
+
+RUN yarn install --immutable
+RUN yarn run build
+
+# ================ #
+#   Runner Stage   #
+# ================ #
+
+FROM base AS runner
+
+ENV NODE_ENV="production"
+ENV NODE_OPTIONS="--enable-source-maps"
 ENV HOST=0.0.0.0
 ENV PORT=8290
 
-RUN yarn --frozen-lockfile --no-bin-links
+COPY --chown=node:node --from=builder /usr/app/dist dist
+COPY --chown=node:node --from=builder /usr/app/src/backend src/backend
+
+RUN yarn workspaces focus --all --production
 
 EXPOSE 8290
 
 USER node
 
-CMD [ "dumb-init", "yarn", "start" ]
+CMD [ "yarn", "run", "start"]
