--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -17,7 +17,7 @@
 		"connect-ratelimit": "0.0.7",
 		"connect-route": "0.1.5",
 		"highlight.js": "^11.3.1",
-		"redis": "3.1.2",
+		"ioredis": "^4.28.1",
 		"regenerator-runtime": "^0.13.9",
 		"st": "^3.0.0"
 	},
@@ -32,6 +32,7 @@
 		"@sapphire/eslint-config": "^4.0.7",
 		"@sapphire/prettier-config": "^1.2.6",
 		"@sapphire/ts-config": "^3.1.6",
+		"@types/ioredis": "^4.28.1",
 		"eslint": "^8.3.0",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.0.1",
