--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -25,15 +25,15 @@
 		"@babel/core": "^7.16.7",
 		"@parcel/packager-raw-url": "^2.2.0",
 		"@parcel/packager-xml": "^2.2.0",
-		"@parcel/transformer-image": "2.2.0",
-		"@parcel/transformer-sass": "2.2.0",
+		"@parcel/transformer-image": "^2.2.0",
+		"@parcel/transformer-sass": "^2.2.0",
 		"@parcel/transformer-webmanifest": "^2.2.0",
 		"@parcel/transformer-xml": "^2.2.0",
 		"@sapphire/eslint-config": "^4.0.9",
 		"@sapphire/prettier-config": "^1.2.8",
 		"@sapphire/ts-config": "^3.1.7",
 		"@types/ioredis": "^4.28.7",
-		"eslint": "^8.7.0",
+		"eslint": "~8.6.0",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.2.0",
 		"prettier": "^2.5.1",
