--- a/.github/workflows/haste-server-deployment.yml
+++ b/.github/workflows/haste-server-deployment.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # renovate: tag=v2
+      - name: Change directory
+        run: cd haste-server
       - name: Add problem matchers
         run: echo "::add-matcher::.github/problemMatchers/eslint.json"
       - name: Use Node.js v16
@@ -23,11 +25,9 @@ jobs:
           node-version: 16
           cache: yarn
       - name: Install Dependencies
-        run: yarn --frozen-lockfile
-        working-directory: haste-server
+        run: yarn --immutable
       - name: Run ESLint
         run: yarn lint --fix=false
-        working-directory: haste-server
 
   Building:
     name: Building
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # renovate: tag=v2
+      - name: Change directory
+        run: cd haste-server
       - name: Add problem matchers
         run: echo "::add-matcher::.github/problemMatchers/tsc.json"
       - name: Use Node.js v16
@@ -48,11 +50,9 @@ jobs:
           path: ${{ github.workspace }}/haste-server/.parcel-cache
           key: ${{ runner.os }}-parcel-${{ hashFiles('**/haste-server/yarn.lock') }}
       - name: Install Dependencies
-        run: yarn --frozen-lockfile
-        working-directory: haste-server
+        run: yarn --immutable
       - name: Run Parcel Build
         run: yarn build
-        working-directory: haste-server
       - name: Store dist folder
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2 # renovate: tag=v2
         with:
