--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -33,7 +33,11 @@
 		"@sapphire/prettier-config": "^1.2.8",
 		"@sapphire/ts-config": "^3.1.7",
 		"@types/ioredis": "^4.28.7",
+		"@typescript-eslint/eslint-plugin": "^5.9.0",
+		"@typescript-eslint/parser": "^5.9.0",
 		"eslint": "~8.6.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"npm-run-all": "^4.1.5",
 		"parcel": "^2.2.0",
 		"prettier": "^2.5.1",
