--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -23,12 +23,12 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.8",
-		"@parcel/packager-raw-url": "^2.4.0",
-		"@parcel/packager-xml": "^2.4.0",
-		"@parcel/transformer-image": "^2.4.0",
-		"@parcel/transformer-sass": "^2.4.0",
-		"@parcel/transformer-webmanifest": "^2.4.0",
-		"@parcel/transformer-xml": "^2.4.0",
+		"@parcel/packager-raw-url": "2.3.2",
+		"@parcel/packager-xml": "2.3.2",
+		"@parcel/transformer-image": "2.3.2",
+		"@parcel/transformer-sass": "2.3.2",
+		"@parcel/transformer-webmanifest": "2.3.2",
+		"@parcel/transformer-xml": "2.3.2",
 		"@sapphire/eslint-config": "^4.3.2",
 		"@sapphire/prettier-config": "^1.4.1",
 		"@sapphire/ts-config": "^3.3.3",
@@ -38,7 +38,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"npm-run-all": "^4.1.5",
-		"parcel": "^2.4.0",
+		"parcel": "2.3.2",
 		"prettier": "^2.6.1",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.6.3"
