--- a/haste-server/package.json
+++ b/haste-server/package.json
@@ -43,6 +43,10 @@
 		"rimraf": "^3.0.2",
 		"typescript": "^4.6.3"
 	},
+	"resolutions": {
+		"ansi-regex": "^5.0.1",
+		"minimist": "^1.2.6"
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
