refactor: backend typescript rewrite
This rewrites the backend to TypeScript. It also:

- Sets this project to ESM
- Cleans up eslint and prettier configs
- Changes `connect` and related with `fastify`
- Adds `tsup` for bundling the backend and a proper `concurrently` setup for a dev server
- Updates docker image deployment to use GH actions caching
- Use env-utilities for better env parsing
- Change keygenerator to a function
- Move maxLength config to fastify
- Add error handler for too large bodies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - '8290:8290'
     environment:
       PORT: 8290
+      HOST: 0.0.0.0
       STORAGE_TYPE: redis
       STORAGE_HOST: redis
       STORAGE_PORT: 8287
