--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -18,8 +18,6 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@v4
-        with:
-          submodules: true
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3.2.0
       - name: Login to GitHub Container Registry
@@ -33,4 +31,9 @@ jobs:
         with:
           push: true
           context: .
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: |
+            linux/amd64
+            linux/arm64
           tags: ghcr.io/skyra-project/haste-server:latest
