--- a/package.json
+++ b/package.json
@@ -3,38 +3,47 @@
 	"version": "1.0.0",
 	"description": "Private Haste Server",
 	"private": true,
+	"main": "dist/backend/server.js",
+	"type": "module",
 	"scripts": {
-		"start": "node src/backend/server.js",
-		"dev": "yarn build && yarn start",
-		"build": "vite build",
+		"start": "node .",
+		"dev": "yarn build && conc -n \"frontend,backend\" -c \"bgBlue,bgGreen\" \"yarn build:frontend --watch --clearScreen=false\" \"yarn build:backend --watch --silent --onSuccess 'node .'\"",
+		"build": "conc -c \"bgBlue,bgGreen\" \"yarn:build:*\"",
+		"build:frontend": "vite build",
+		"build:backend": "tsup",
 		"clean": "rimraf dist data",
-		"lint": "eslint src --fix --ext js,ts,mjs",
-		"prettier": "prettier --ignore-path .prettierignore",
-		"format": "prettier --write ."
+		"lint": "eslint src --fix --ext ts",
+		"format": "prettier --write src"
 	},
 	"dependencies": {
+		"@fastify/rate-limit": "^9.1.0",
+		"@fastify/static": "^7.0.1",
 		"@pnotify/core": "^5.2.0",
-		"connect": "^3.7.0",
-		"connect-ratelimit": "0.0.7",
-		"connect-route": "0.1.5",
+		"@sapphire/fetch": "^3.0.2",
+		"@skyra/env-utilities": "^1.3.0",
+		"fastify": "^4.26.2",
 		"highlight.js": "^11.9.0",
-		"ioredis": "^5.3.2",
-		"st": "^3.0.0"
+		"ioredis": "^5.3.2"
 	},
 	"devDependencies": {
 		"@sapphire/eslint-config": "^5.0.4",
 		"@sapphire/prettier-config": "^2.0.0",
-		"@sapphire/ts-config": "^5.0.1",
-		"@types/node": "^20.11.28",
-		"@typescript-eslint/eslint-plugin": "^7.2.0",
-		"@typescript-eslint/parser": "^7.2.0",
+		"@sapphire/ts-config": "^5.0.0",
+		"@types/node": "^20.11.27",
+		"@typescript-eslint/eslint-plugin": "^7.1.1",
+		"@typescript-eslint/parser": "^7.1.1",
+		"concurrently": "^8.2.2",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"prettier": "^3.2.5",
 		"rimraf": "^5.0.5",
+		"tsup": "^8.0.2",
 		"typescript": "^5.4.2",
 		"vite": "^5.1.6"
+	},
+	"eslintConfig": {
+		"extends": "@sapphire"
 	},
 	"prettier": "@sapphire/prettier-config",
 	"packageManager": "yarn@4.1.1"
