--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
-	"extends": ["@sapphire/ts-config", "@sapphire/ts-config/extra-strict", "@sapphire/ts-config/verbatim", "@sapphire/ts-config/bundler"],
+	"extends": ["@sapphire/ts-config", "@sapphire/ts-config/extra-strict", "@sapphire/ts-config/verbatim"],
 	"compilerOptions": {
-		"rootDir": "src",
-		"outDir": "dist",
-		"allowJs": true,
-		"checkJs": true,
-		"lib": ["ESNext", "DOM"]
-	},
-	"include": ["src"]
+		"declaration": false,
+		"declarationMap": false
+	}
 }
