--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["src", "vite.config.ts", "tsup.config.ts"]
+	"include": ["src", "vite.config.mjs", "tsup.config.ts"]
 }
