--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["../../tsconfig.json", "@sapphire/ts-config/bundler"],
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"rootDir": "."
 	},
