--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"format": "prettier --write src"
 	},
 	"dependencies": {
+		"@fastify/cors": "^9.0.1",
 		"@fastify/rate-limit": "^9.1.0",
+		"@fastify/sensible": "^5.5.0",
 		"@fastify/static": "^7.0.1",
 		"@pnotify/core": "^5.2.0",
 		"@sapphire/fetch": "^3.0.2",
