--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
 		"@fastify/rate-limit": "^9.1.0",
 		"@fastify/sensible": "^5.5.0",
 		"@fastify/static": "^7.0.1",
+		"@fastify/swagger": "^8.14.0",
+		"@fastify/swagger-ui": "^3.0.0",
+		"@fastify/type-provider-typebox": "^4.0.0",
 		"@pnotify/core": "^5.2.0",
 		"@sapphire/fetch": "^3.0.2",
+		"@sinclair/typebox": "^0.32.15",
 		"@skyra/env-utilities": "^1.3.0",
 		"fastify": "^4.26.2",
 		"highlight.js": "^11.9.0",
@@ -35,6 +39,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
 		"@typescript-eslint/parser": "^7.1.1",
 		"concurrently": "^8.2.2",
+		"esbuild-plugin-version-injector": "^1.2.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
