--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/node": "^20.11.27",
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
 		"@typescript-eslint/parser": "^7.1.1",
+		"autoprefixer": "^10.4.18",
 		"concurrently": "^8.2.2",
 		"esbuild-plugin-version-injector": "^1.2.1",
 		"eslint": "^8.57.0",
