--- a/package.json
+++ b/package.json
@@ -6,51 +6,31 @@
 	"main": "dist/backend/server.js",
 	"type": "module",
 	"scripts": {
-		"start": "node .",
-		"dev": "yarn build && conc -n \"frontend,backend\" -c \"bgBlue,bgGreen\" \"yarn build:frontend --watch --clearScreen=false\" \"yarn build:backend --watch --silent --onSuccess 'sleep 2 && node .'\"",
-		"build": "conc -c \"bgBlue,bgGreen\" \"yarn:build:*\"",
-		"build:frontend": "vite build",
-		"build:backend": "tsup",
-		"clean": "rimraf dist data",
-		"lint": "eslint src --fix --ext ts",
-		"format": "prettier --write src"
-	},
-	"dependencies": {
-		"@fastify/rate-limit": "^9.1.0",
-		"@fastify/sensible": "^5.6.0",
-		"@fastify/static": "^7.0.4",
-		"@fastify/swagger": "^8.14.0",
-		"@fastify/swagger-ui": "^4.0.0",
-		"@fastify/type-provider-typebox": "^4.0.0",
-		"@pnotify/core": "^5.2.0",
-		"@sapphire/fetch": "^3.0.2",
-		"@sinclair/typebox": "^0.32.31",
-		"@skyra/env-utilities": "^1.3.0",
-		"fastify": "^4.27.0",
-		"highlight.js": "^11.9.0",
-		"ioredis": "^5.4.1"
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"start": "node .output/server/index.mjs",
+		"format": "prettier --write .",
+		"format:check": "prettier --check ."
 	},
 	"devDependencies": {
-		"@sapphire/eslint-config": "^5.0.5",
+		"@nuxt/fonts": "^0.3.0",
+		"@nuxt/ui": "^2.14.2",
+		"@prettier/plugin-xml": "^3.3.1",
+		"@sapphire/fetch": "^3.0.2",
 		"@sapphire/prettier-config": "^2.0.0",
-		"@sapphire/ts-config": "^5.0.1",
-		"@types/node": "^20.14.2",
-		"@typescript-eslint/eslint-plugin": "^7.12.0",
-		"@typescript-eslint/parser": "^7.12.0",
-		"autoprefixer": "^10.4.19",
-		"concurrently": "^8.2.2",
+		"@skyra/env-utilities": "^1.3.0",
+		"@types/node": "^20.11.28",
+		"@vite-pwa/nuxt": "^0.6.0",
 		"esbuild-plugin-version-injector": "^1.2.1",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"prettier": "^3.3.1",
-		"rimraf": "^5.0.7",
-		"tsup": "^8.1.0",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.13"
-	},
-	"eslintConfig": {
-		"extends": "@sapphire"
+		"highlight.js": "^11.9.0",
+		"nuxt": "3.10.3",
+		"nuxt-rate-limit": "^1.2.0",
+		"prettier": "^3.2.5",
+		"typescript": "^5.4.2",
+		"vite-plugin-pwa": "^0.19.4"
 	},
 	"packageManager": "yarn@4.2.2"
 }
