--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,7 @@ node_modules/
 .yarn/install-state.gz
 
 # Environment variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
 
 # Ignore log files
 *.log
